# kokkos-hpx-benchmarks

./: .gitignore  CMakeLists.txt  README.md  build_settings.sh
ArrayOfDotProducts/: .gitignore  README.md  build_all.sh  run_all.sh
ArrayOfDotProducts/HPX/: CMakeLists.txt  array_of_dot_products.cpp  arrays_of_dot_products.cpp
ArrayOfDotProducts/Kokkos-Flat/: array_of_dot_products.cpp
ArrayOfDotProducts/Kokkos-Hierarchy/: array_of_dot_products.cpp
ArrayOfDotProducts/Kokkos-Minimal/: array_of_dot_products.cpp
ArrayOfDotProducts/OpenMP/: array_of_dot_products.cpp
ArrayOfDotProducts/Serial/: array_of_dot_products.cpp
Overhead/: CMakeLists.txt  task_overhead_kokkos.cpp  task_overhead_serial.cpp
ParallelFor/: CMakeLists.txt  build_all.sh  run_all.sh
ParallelFor/HPX/: CMakeLists.txt  parallel_for.cpp
ParallelFor/Kokkos/: parallel_for.cpp
ParallelFor/Serial/: Makefile  parallel_for.cpp
ParallelReduce/: CMakeLists.txt  build_all.sh  run_all.sh
ParallelReduce/HPX/: CMakeLists.txt  parallel_reduce.cpp
ParallelReduce/Kokkos/: Makefile  parallel_reduce.cpp
ParallelReduce/Serial/: Makefile  parallel_reduce.cpp
ParallelScan/: CMakeLists.txt  build_all.sh  run_all.sh
ParallelScan/HPX/: CMakeLists.txt  parallel_scan.cpp
ParallelScan/Kokkos/: Makefile  parallel_scan.cpp
ParallelScan/Serial/: Makefile  parallel_scan.cpp
scripts/: CMakeLists.txt  parallel_for.sh.in  parallel_tests.sh.in
